<resources>
    <!-- Name App -->
    <string name="app_name">Marvel</string>
    <!-- Title Toolbar -->
    <string name="title_toolbar_heroes">MARVEL HEROES</string>
    <string name="title_toolbar_comics">MARVEL COMICS</string>
    <string name="back">Voltar</string>
    <!-- Texts layout list_itens_heroes -->
    <string name="tools_description_heroes">Despite super spy Natasha Romanoff’s checkered past, she’s become one of S.H.I.E.L.D.’s most deadly assassins and a frequent member of the Avengers.</string>
    <string name="tools_name_heroes">Black Widow</string>
    <string name="description_image_heroe_selected">Imagem de um Super Heroi da Marvel</string>
    <string name="description_image_comis_selected">Imagem de um Comic de um Super Heroi da Marvel</string>
    <string name="description_name_heroe">Nome do Heroi</string>
    <string name="description_pages_count">Número de páginas</string>
    <string name="description_heroe">Pequena descrição sobre o Heroi</string>
    <!-- Texts layout list_itens_comics -->
    <string name="tools_title_comic">Black Widow (2020) #11</string>
    <string name="tools_total_pages">10 páginas</string>
    <string name="comics_pages"> páginas</string>
    <!-- Texts Errors Repository -->
    <string name="message_error_internet">Verifique sua conexão com a internet e tente novamente!</string>
    <string name="message_error_server">Erro de comunicação com o servidor</string>
    <string name="message_error_code_key">InvalidCredentials</string>
    <string name="message_error_key">Credenciais inválidas</string>
    <string name="message_error_internal_key">Aconteceu um erro inesperado</string>
    <string name="message_error_insert_database">Erro ao salvar os heróis na base de dados</string>
</resources>