<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewListHeroes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/background"
        app:cardCornerRadius="@dimen/radius_card_view_heroes"
        app:cardElevation="@dimen/elevation_card_view_heroes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewHeroes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:importantForAccessibility="no"
                android:contentDescription="@string/description_image_heroe_selected"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/black_widow" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtNameHeroes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:padding="@dimen/padding_8"
                android:focusable="true"
                android:contentDescription="@string/description_name_heroe"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textSize="@dimen/size_txt_name_heroes"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toTopOf="@+id/txtDescriptionHeroes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/tools_name_heroes" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDescriptionHeroes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:padding="@dimen/padding_8"
                android:focusable="true"
                android:contentDescription="@string/description_heroe"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textSize="@dimen/size_txt_description_heroes"
                android:textStyle="bold"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewHeroes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/tools_description_heroes" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>